--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: "java"
 dependencies {
    compile "joda-time:joda-time:2.4"
+   compile 'log4j:log4j:1.2.17'
+   compile 'log4j:apache-log4j-extras:1.2.17'
+   compile 'junit:junit:4.12'
+   
 }
