learning about servlet

--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "war"
 apply plugin: 'org.akhikhl.gretty'
+apply plugin: 'eclipse'
 // apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
 
 
@@ -32,6 +33,11 @@ gretty{
 	port = 8081
 }
 
+eclipse {
+    classpath {
+       downloadSources=true
+    }
+}
 
 
 
