--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,25 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/hello</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>Simple</servlet-name>
+		<servlet-class>edu.gqq.web.SimpleServlet</servlet-class>
+		<load-on-startup>0</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Simple</servlet-name>
+		<url-pattern>/simple</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>Generic1</servlet-name>
+		<servlet-class>edu.gqq.web.Generic1</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Generic1</servlet-name>
+		<url-pattern>/generic1</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
